arranging steps of installation
arranging steps of installation

--- a/client_venv.yml
+++ b/client_venv.yml
@@ -1,4 +1,4 @@
-name: cnvenv15092019
+name: cameranetwork_client
 channels:
   - conda-forge
   - defaults
@@ -168,5 +168,5 @@ dependencies:
     - pymap3d==1.8.1
     - pyzmq==18.1.0
     - git+git://github.com/enthought/traits-enaml.git@update-data-frame-table
-prefix: /home/shubi/.conda/envs/cnvenv15092019
+prefix: C:/ProgramData/Anaconda2/envs/cameranetwork_client
 
